# H00M

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  textrenderer.cpp
shaders/: depthShader.frag  fragment_source.glsl.frag  line.frag  line.vert  text.frag  vertex_source.glsl.vert
src/: Camera.cpp  Camera.h  Light.cpp  Material.cpp  Material.h  Model.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  fragment_source.glsl  main.cpp
src/lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  Spotlight.cpp  Spotlight.h
src/models/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/rendering/: Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/utility/: CommonValues.h  Line.cpp  Line.h
udemy/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Light.h  Material.cpp  Mesh.cpp  Mesh.h  Model.cpp  PointLight.h  Spotlight.cpp  Texture.h  Window.cpp  main.cpp
